--- a/styles/_commonStyles.scss
+++ b/styles/_commonStyles.scss
@@ -69,8 +69,19 @@
 .margin-r1 {
     margin-right: 1%;
 }
+.margin-l2 {
+    margin-left: 2rem;
+}
+.margin-r2 {
+    margin-right: 2rem;
+}
 .m-1 {
     margin: 0.7rem;
+}
+
+.m-auto{
+    margin-right: auto!important;
+    margin-left: auto!important;
 }
 
 //POSITIONS
