--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -366,7 +366,7 @@
     }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     body {
         // width: 100% !important;
         // margin-left: 1% !important;
