--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,7 +17,7 @@
 
 .section-2 {
     height: 100%;
-    width: 100%;
+    max-width: 90%;
     margin-left: 1%;
     a {
         &::after {
@@ -47,11 +47,11 @@
 
 /*************************************************SECTION-3*************************************************/
 .section-3 {
-    width: 100%;
+    max-width: 90%;
     .single-box-1 {
         width: 50%;
         min-height: 100%;
-        margin-left: 1%;
+        // margin-left: 1%;
         .content {
             height: 100%;
         }
@@ -82,7 +82,7 @@
 
 /************************************************** SECTION-4 ********************************************************/
 .section-4 {
-    margin-left: 1%;
+    max-width: 90%;
     a {
         line-height: inherit;
         color: $buttonGreen;
@@ -100,6 +100,8 @@
 }
 
 .section-6 {
+    max-width: 90%;
+
     .img {
         margin-right: -4rem !important;
     }
@@ -107,7 +109,6 @@
 
 /************************************************** SECTION-7 ********************************************************/
 .section-7 {
-    margin-left: 1%;
     background-color: $greyColor;
     border: none;
     .imgBox {
@@ -127,7 +128,7 @@
 /************************************************** SECTION-8 ********************************************************/
 
 .section-8 {
-    max-width: 100%;
+    max-width: 90%;
     margin-bottom: 4rem;
     h3 {
         font-size: 47px;
@@ -274,6 +275,7 @@
 /************************************************** SECTION-11 ********************************************************/
 
 .section-11 {
+    max-width: 90%;
     flex-flow: row-wrap;
     .blog-section {
         padding: 2%;
@@ -293,6 +295,7 @@
 /************************************************** SECTION-12 ********************************************************/
 
 .section-12 {
+    max-width: 90%;
     background-image: linear-gradient(
             to bottom,
             rgba(245, 246, 252, 0) 0,
@@ -384,6 +387,7 @@
 /************************************************** SECTION-14 ********************************************************/
 
 .section-14 {
+    max-width: 90%;
     div {
         height: auto;
     }
