--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,7 +163,6 @@ ul .toggleBtn {
 
 .dummycarousel p {
   margin-bottom: 1rem;
-  width: auto;
   font-size: calc(13.6px + 0.625vw) !important;
   line-height: 1.3;
   text-rendering: optimizeLegibility;
@@ -951,7 +950,6 @@ p {
     font-size: 3.15rem;
   }
   .section1-p {
-    width: auto;
     font-size: calc(13.6px + 0.625vw) !important;
   }
   .column-block {
@@ -1032,7 +1030,7 @@ p {
   }
   .section-3 .single-box-2 {
     width: 100% !important;
-    margin-left: 1% !important;
+    margin-left: 0% !important;
   }
   .section-7 {
     padding: 4.5rem !important;
@@ -1119,35 +1117,36 @@ p {
   }
 }
 
-@media screen and (max-width: 320px) {
-  body .section-1,
-  body .section-2,
-  body .section-3,
-  body .section-4,
-  body .section-5,
-  body .section-6,
-  body .section-7,
-  body .section-8,
-  body .section-9,
-  body .section-10,
-  body .section-11,
-  body .section-12,
-  body .section-13,
-  body .section-14 {
-    margin-left: 0.3% !important;
+@media screen and (max-width: 375px) {
+  body {
+    width: 100% !important;
+  }
+}
+
+@media screen and (max-width: 411px) {
+  body {
+    width: 102%;
+  }
+  .navBar .main-logo {
+    padding-left: 0.5rem !important;
+  }
+  .dummycarousel::before {
+    content: "";
   }
   .section-7 {
     padding: 0 !important;
   }
-  .section-7 .imgBox {
+  .section-7 .imgBox img {
+    padding: 0 !important;
+    padding-top: 23% !important;
+  }
+  .section-9 h5 {
+    font-size: calc(10.6px + 0.625vw) !important;
+  }
+  .section-14 {
     margin-left: 0 !important;
+    padding: 0.7rem !important;
   }
-  .section-14 h6 {
-    font-size: calc(5.6px + 2.625vw) !important;
-  }
-}
-
-@media screen and (min-width: 375px) {
   .section-14 h6 {
     font-size: calc(5.6px + 2.625vw) !important;
   }
@@ -1263,6 +1262,7 @@ body i {
 .section-7 {
   background-color: #e6e6e6;
   border: none;
+  margin-top: 1rem !important;
 }
 
 .section-7 .imgBox {
@@ -1271,7 +1271,7 @@ body i {
 }
 
 .section-7 .imgBox img {
-  padding-top: 15% !important;
+  padding-top: 15%;
 }
 
 .section-7 .content {
@@ -1321,7 +1321,7 @@ body i {
 }
 
 .section-9 h5 {
-  font-size: calc(13.6px + 0.625vw) !important;
+  font-size: calc(13.6px + 0.625vw);
 }
 
 /************************************************** SECTION-10 ********************************************************/
@@ -1428,8 +1428,8 @@ body i {
 /************************************************** SECTION-12 ********************************************************/
 .section-12 {
   max-width: 90%;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(10%, rgba(217, 219, 228, 0.13)), color-stop(20%, rgba(217, 219, 228, 0.349)), color-stop(30%, rgba(217, 219, 228, 0.438)), color-stop(50%, rgba(255, 255, 255, 0.199)), to(white)), url("../assets/formbg.jpg");
-  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(217, 219, 228, 0.13) 10%, rgba(217, 219, 228, 0.349) 20%, rgba(217, 219, 228, 0.438) 30%, rgba(255, 255, 255, 0.199) 50%, white 100%), url("../assets/formbg.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(245, 246, 252, 0)), color-stop(10%, rgba(255, 255, 255, 0.616)), color-stop(20%, rgba(217, 219, 228, 0.753)), color-stop(30%, rgba(217, 219, 228, 0.808)), color-stop(50%, white), to(white)), url("../assets/formbg.jpg");
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0, rgba(255, 255, 255, 0.616) 10%, rgba(217, 219, 228, 0.753) 20%, rgba(217, 219, 228, 0.808) 30%, white 50%, white 100%), url("../assets/formbg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1552,6 +1552,10 @@ body i {
 .section-14 ul li {
   margin-bottom: 1%;
   line-height: 1.5;
+}
+
+.section-14 h6 {
+  font-size: calc(4.6px + 1.625vw);
 }
 
 .section-14 .parent {
