--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -111,11 +111,12 @@
 .section-7 {
     background-color: $greyColor;
     border: none;
+    margin-top: 1rem!important;
     .imgBox {
         margin-left: 6rem;
         margin-bottom: 2rem;
         img {
-            padding-top: 15% !important;
+            padding-top: 15%;
         }
     }
     .content {
@@ -161,7 +162,7 @@
         }
     }
     h5 {
-        font-size: $dynamicFontSizeParagraph;
+        font-size: calc(13.6px + 0.625vw);
     }
 }
 
@@ -299,10 +300,10 @@
     background-image: linear-gradient(
             to bottom,
             rgba(245, 246, 252, 0) 0,
-            rgba(217, 219, 228, 0.13) 10%,
-            rgba(217, 219, 228, 0.349) 20%,
-            rgba(217, 219, 228, 0.438) 30%,
-            rgba(255, 255, 255, 0.199) 50%,
+            rgba(255, 255, 255, 0.616) 10%,
+            rgba(217, 219, 228, 0.753) 20%,
+            rgba(217, 219, 228, 0.808) 30%,
+            rgb(255, 255, 255) 50%,
             rgb(255, 255, 255) 100%
         ),
         url("../assets/formbg.jpg");
@@ -399,7 +400,7 @@
     }
 
     h6 {
-        // font-size: calc(3.6px + 1.625vw) !important;
+        font-size: calc(4.6px + 1.625vw);
     }
     .parent {
         display: grid;
