--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -408,6 +408,9 @@
             font-size: calc(5.6px + 2.625vw) !important;
         }
     }
+        .pl-5{
+        padding-left: 0 !important;
+    }
 }
 body {
     i {
