--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1157,6 +1157,9 @@ p {
   .section-14 h6 {
     font-size: calc(5.6px + 2.625vw) !important;
   }
+  .pl-5 {
+    padding-left: 0 !important;
+  }
 }
 
 body i {
